test/cli/test/persistent_volume_claims/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
spec:
  containers:
  - name: web
    image: nginx
